--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,3 +356,28 @@
     margin-left: 0;
   }
 }
+
+
+#securityzada{
+  width:25%;
+  margin-left:-10px;
+}
+
+@media (max-width: 720px){
+  #securityzada{
+    width:90vw;
+    margin-left:-10px;
+  }
+}
+
+
+#securitycima{
+width: 30%;
+}
+
+
+@media (max-width: 720px){
+  #securitycima{
+    width: 80%;
+  }
+}
